force-app/main/default/objects/FB_Post__c/FB_Post__c.object-meta.xml
<CustomObject>
    <label>FB Post</label>
    <nameField>
        <label>FB Post Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FB Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>