force-app/main/default/objects/FB_Post__c/fields/Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfillment</label>
    <referenceTo>Fulfillment__c</referenceTo>
    <relationshipLabel>FB Posts</relationshipLabel>
    <relationshipName>FB_Posts</relationshipName>
    <type>Lookup</type>
</CustomField>