force-app/main/default/objects/FB_Post__c/fields/Message_Label__c.field-meta.xml
<CustomField>
    <fullName>Message_Label__c</fullName>
    <description>The Label of the webapp&apos;s Message that was used by the webapp to format this record&apos;s Message field.</description>
    <inlineHelpText>The Label of the webapp&apos;s Message that was used by the webapp to format this record&apos;s Message field.</inlineHelpText>
    <label>Message Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>