force-app/main/default/objects/FB_Post__c/fields/Post_Type__c.field-meta.xml
<CustomField>
    <fullName>Post_Type__c</fullName>
    <label>Post Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Image</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>